--- a/application/views/scripts/piece-jointe/display.phtml
+++ b/application/views/scripts/piece-jointe/display.phtml
@@ -1,5 +1,5 @@
 <?php foreach ($this->listePj as $pj) : ?>
-<tr class= 'table_liste'>    
+<tr class= 'table_liste_pj <?php if($pj['NB_ENFANTS']  > 0) echo "slide" ?>' id="<?php echo $pj['ID_PIECEJOINTE'] ?>">
     <?php  /* Lien de la pièce jointe */ ?>
     <td>
         <a 
@@ -38,11 +38,12 @@
     </td>
     <td>
         <?php if($this->verrou != 1): ?>
-            <a class='delete' href='/piece-jointe/delete?id_pj=<?php echo $pj["ID_PIECEJOINTE"] ?>&type=<?php echo $this->type ?>&id=<?php echo $this->id ?>'>
+            <a class='delete' href='/piece-jointe/delete?id_pj=<?php echo $pj["ID_PIECEJOINTE"]?>&type=<?php echo $this->type ?>&id=<?php echo $this->id ?>'>
                 <i class="icon-trash"></i>
             </a>
         <?php endif ?>
     </td>
+
 </tr>  
 <?php endforeach ?>
 
