--- a/application/views/scripts/piece-jointe/results/piece-jointe-signe.phtml
+++ b/application/views/scripts/piece-jointe/results/piece-jointe-signe.phtml
@@ -1,26 +1,19 @@
-<li class="piecejointe <?php if($this->NB_ENFANTS > 0) echo "slide" ?>" id="<?php echo $this->ID_PIECEJOINTE ?>">
-<?php echo $this->NB_ENFANTS ?>
-    <?php /* Icone représentant le dropdown des fils */ ?>
-    <?php if($this->NB_ENFANTS > 0) : ?>
-    <span class="icone_enfants" ><i class='ui-icon ui-icon-triangle-1-e' style='position: relative; left: -25px; float: left; margin-right: -25px;' ></i></span>
-    <?php endif ?>
-
-    <div class="pull-left">
-
-        <span class="doss-nom">
-            <?php if ($this->VERROU_DOSSIER == 1): ?>
-                <i class="icon-lock"></i>
-            <?php endif ?>
-        </span>
-
-        <?php /* Icone de chargement des enfants (si il y'en a, et si on est en mode niveau */ ?>
-        <?php if($this->NB_ENFANTS > 0) : ?>
-            <span class='load ui-helper-hidden' ><img src='/images/load.gif' alt='Chargement ...' /></span>
-        <?php endif ?>
-
-    </div>
+<?php /* */ ?>
+            <td>
+                <a class="file <?php echo substr(strtolower($this->EXTENSION_PIECEJOINTE), 1, 3) ?>"
+                href='<?php echo $this->url(array('controller' => 'piece-jointe', 'action' => 'get', 'id' => $this->id, 'idpj' => $this->ID_PIECEJOINTE, 'type' => $this->type)) ?>'
+                <?php if ($this->DESCRIPTION_PIECEJOINTE): ?> title="<?php echo $this->DESCRIPTION_PIECEJOINTE ?>" <?php endif ?>
+                target='_blank' ><?php echo $this->NOM_PIECEJOINTE.$this->EXTENSION_PIECEJOINTE?>
+                </a>
+            </td>
+            <?php /* Description */ ?>
+                <td><?php echo nl2br(str_replace("<br />", "" ,$this->DESCRIPTION_PIECEJOINTE)) ?></td>
+            <?php /* date de création*/ ?>
+                <td>
+                    <?php
+                        $date = new Zend_Date($this->DATE_PIECEJOINTE, Zend_Date::DATES);
+                        echo $date->get( Zend_Date::DAY."/".Zend_Date::MONTH."/".Zend_Date::YEAR );
+                    ?>
+            </td>
 
 
-    <div style='clear: both'></div>
-
-</li>
