--- a/application/views/scripts/piece-jointe/index.phtml
+++ b/application/views/scripts/piece-jointe/index.phtml
@@ -131,8 +131,9 @@
 					},
 				type: "post",
 				success: function() {
-					console.log("param 1:"+ idPj + " param 2: "+ idPj +  " param 3:"+ fileName + " param 4:"+ "<?php echo $this->mail_user ?>" )
-				}
+				$("#alert").show();
+				setTimeout( function() { $("#alert").fadeOut(); }, 3500);
+			}
 
             });
 		});
