--- a/application/views/scripts/piece-jointe/display.phtml
+++ b/application/views/scripts/piece-jointe/display.phtml
@@ -25,8 +25,8 @@
         <i class="icon-pencil"></i>
     </button>
     </td>
-    <div id='alert' class='ui-state-highlight ui-helper-hidden ' style='padding: .3em;'>
-            Veuillez vérifier votre courriel.
+    <div id='alert' class='ui-state-highlight ui-helper-hidden ' style='padding: .2em; padding: 8px 35px 8px 14px;color: #468847;background: #dff0d8;border-color: #d6e9c6;'>
+        <strong> Piece jointe envoyer ! </strong> Veuillez vérifier votre courriel: <?php echo $this->mail_user?>.
     </div>
     <td>
         <i class="<?php echo  $this->translateStatus;?>" title="<?php echo $this->infoStatus;?>"></i>
