--- a/application/views/scripts/piece-jointe/display.phtml
+++ b/application/views/scripts/piece-jointe/display.phtml
@@ -1,51 +1,53 @@
 <?php foreach ($this->listePj as $pj) : ?>
-<tr class= 'table_liste_pj <?php if($pj['NB_ENFANTS']  > 0) echo "slide" ?>' id="<?php echo $pj['ID_PIECEJOINTE'] ?>">
-    <?php  /* Lien de la pièce jointe */ ?>
-    <td>
-        <a 
-            class="file <?php echo substr(strtolower($pj['EXTENSION_PIECEJOINTE']), 1, 3) ?>"
-            href='<?php echo $this->url(array('controller' => 'piece-jointe', 'action' => 'get', 'id' => $this->id, 'idpj' => $pj['ID_PIECEJOINTE'], 'type' => $this->type)) ?>'
-            <?php if ($pj['DESCRIPTION_PIECEJOINTE']): ?> title="<?php echo $pj['DESCRIPTION_PIECEJOINTE'] ?>" <?php endif ?>
-            target='_blank' ><?php echo $pj['NOM_PIECEJOINTE'].$pj['EXTENSION_PIECEJOINTE'] ?>
-        </a>
-    </td>
-    
-    <?php /* Description */ ?>
-    <td><?php echo nl2br(str_replace("<br />", "" ,$pj['DESCRIPTION_PIECEJOINTE'])) ?></td>
-    
-    <?php /* date de création*/ ?>
-    <td>
-        <?php
-            $date = new Zend_Date($pj['DATE_PIECEJOINTE'], Zend_Date::DATES);
-            echo $date->get( Zend_Date::DAY."/".Zend_Date::MONTH."/".Zend_Date::YEAR );
-        ?>
-    </td>
-    <td>
-    <button class='signe' value='<?php echo $pj["ID_PIECEJOINTE"] ?>'data-fileName='<?php echo $pj['NOM_PIECEJOINTE']?>'>
-        <i class="icon-pencil"></i>
-    </button>
-    </td>
-    <div id='alert' class='ui-state-highlight ui-helper-hidden ' style='padding: .2em; padding: 8px 35px 8px 14px;color: #468847;background: #dff0d8;border-color: #d6e9c6;'>
-        <strong> Piece jointe envoyer ! </strong> Veuillez vérifier votre courriel: <?php echo $this->mail_user?>.
-    </div>
-    <td>
-        <i class="<?php echo  $this->translateStatus;?>" title="<?php echo $this->infoStatus;?>"></i>
-    </td>
-    <?php /* Action*/ ?>
-    <td>
-    <button class='addPJSigne' value='<?php echo $pj["ID_PIECEJOINTE"] ?>'>
-        <i class="icon-plus-sign"></i>
-    </button>
-    </td>
-    <td>
-        <?php if($this->verrou != 1): ?>
-            <a class='delete' href='/piece-jointe/delete?id_pj=<?php echo $pj["ID_PIECEJOINTE"]?>&type=<?php echo $this->type ?>&id=<?php echo $this->id ?>'>
-                <i class="icon-trash"></i>
-            </a>
-        <?php endif ?>
-    </td>
+    <?php if (null === $pj['SIGNE_PIECEJOINTE']) : ?>
+        <tr class= 'table_liste_pj <?php if($pj['NB_ENFANTS']  > 0) echo "slide" ?>' id="<?php echo $pj['ID_PIECEJOINTE'] ?>">
+            <?php  /* Lien de la pièce jointe */ ?>
+            <td>
+                <a 
+                    class="file <?php echo substr(strtolower($pj['EXTENSION_PIECEJOINTE']), 1, 3) ?>"
+                    href='<?php echo $this->url(array('controller' => 'piece-jointe', 'action' => 'get', 'id' => $this->id, 'idpj' => $pj['ID_PIECEJOINTE'], 'type' => $this->type)) ?>'
+                    <?php if ($pj['DESCRIPTION_PIECEJOINTE']): ?> title="<?php echo $pj['DESCRIPTION_PIECEJOINTE'] ?>" <?php endif ?>
+                    target='_blank' ><?php echo $pj['NOM_PIECEJOINTE'].$pj['EXTENSION_PIECEJOINTE'] ?>
+                </a>
+            </td>
+            
+            <?php /* Description */ ?>
+            <td><?php echo nl2br(str_replace("<br />", "" ,$pj['DESCRIPTION_PIECEJOINTE'])) ?></td>
+            
+            <?php /* date de création*/ ?>
+            <td>
+                <?php
+                    $date = new Zend_Date($pj['DATE_PIECEJOINTE'], Zend_Date::DATES);
+                    echo $date->get( Zend_Date::DAY."/".Zend_Date::MONTH."/".Zend_Date::YEAR );
+                ?>
+            </td>
+            <td>
+            <button class='signe' value='<?php echo $pj["ID_PIECEJOINTE"] ?>'data-fileName='<?php echo $pj['NOM_PIECEJOINTE']?>'>
+                <i class="icon-pencil"></i>
+            </button>
+            </td>
+            <div id='alert' class='ui-state-highlight ui-helper-hidden ' style='padding: .2em; padding: 8px 35px 8px 14px;color: #468847;background: #dff0d8;border-color: #d6e9c6;'>
+                <strong> Pièce jointe envoyée ! </strong> Veuillez vérifier votre courriel: <?php echo $this->mail_user?>.
+            </div>
+            <td>
+                <i class="<?php echo  $this->translateStatus;?>" title="<?php echo $this->infoStatus;?>"></i>
+            </td>
+            <?php /* Action*/ ?>
+            <td>
+            <button class='addPJSigne' value='<?php echo $pj["ID_PIECEJOINTE"] ?>'>
+                <i class="icon-plus-sign"></i>
+            </button>
+            </td>
+            <td>
+                <?php if($this->verrou != 1): ?>
+                    <a class='delete' href='/piece-jointe/delete?id_pj=<?php echo $pj["ID_PIECEJOINTE"]?>&type=<?php echo $this->type ?>&id=<?php echo $this->id ?>'>
+                        <i class="icon-trash"></i>
+                    </a>
+                <?php endif ?>
+            </td>
 
-</tr>  
+        </tr>
+    <?php endif ?>
 <?php endforeach ?>
 
 
