Refactoring du fichier index des dossiers pour une meilleure maintenabilité / évolutivité (#17)
* Refactoring fichier index dossier pour maintenabilité

* Fix alignement boutons formulaire dossier

* Reformatage du fichier

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1240,3 +1240,7 @@ dl.champ_effectif_camping dt {
 dl.champ_effectif_camping dd input {
     width: 139px;
 }
+
+#dossierInfos form .btn {
+    margin-bottom: 10px;
+}
