--- a/application/views/scripts/dossier/effectifs-et-degagements.phtml
+++ b/application/views/scripts/dossier/effectifs-et-degagements.phtml
@@ -1,7 +1,6 @@
 <form action=/dossier/effectifs-et-degagements/id/<?php echo $this->idDossier?> method="post">
     <div class='pull-right' >
-        <input type='button' class="btn see-balises" value="Voir les balises disponibles">
-        <input type='submit' class="btn btn-success" value="Modifier effectifs">
+        <input type='submit' class="btn btn-success" value="Modifier effectifs dégagements">
     </div>
         <?php foreach($this->EffectifDegagement as $label) : ?>
         <h3>
