--- a/application/views/scripts/search/results/dossier.phtml
+++ b/application/views/scripts/search/results/dossier.phtml
@@ -15,12 +15,51 @@
                 <a href='/dossier/piece-jointe/id/<?php echo $this->ID_DOSSIER ?>'>
                     <i class="icon-file"></i>
                 </a>
-            <?php endif ?>
-            <a href='/dossier/index/id/<?php echo $this->ID_DOSSIER ?>' title='<?php echo htmlspecialchars($this->LIBELLE_DOSSIERTYPE . " - " . $this->LIBELLE_DOSSIERNATURE . (!empty($this->OBJET_DOSSIER) ? " - " . $this->OBJET_DOSSIER : ""), ENT_QUOTES) ?>'>
-                <?php if($this->LIBELLE_ETABLISSEMENTINFORMATIONS != null): ?>
+            <?php endif;
+
+            if (!empty($this->OBJET_DOSSIER)):
+                if (strlen($this->OBJET_DOSSIER) > 70):
+                    $this->OBJET_DOSSIER = substr($this->OBJET_DOSSIER, 0, 70).'(...)';
+                endif;
+
+                if ($this->NB_URBA != ''):
+                    $this->OBJET_DOSSIER .= ' - '.$this->NB_URBA;
+                endif;
+            else:
+                if ($this->NB_URBA != ''):
+                    $this->OBJET_DOSSIER = $this->NB_URBA;
+                else:
+                    $this->OBJET_DOSSIER = '';
+                endif;
+            endif;
+
+            $linkTitleVariables = array_values(
+                array_filter(
+                    array(
+                        $this->LIBELLE_DOSSIERTYPE,
+                        $this->LIBELLE_DOSSIERNATURE,
+                        $this->OBJET_DOSSIER
+                    )
+                )
+            );
+
+            $fulltext = '';
+            for ($i = 0; $i < count($linkTitleVariables); $i++):
+                $fulltext .= $linkTitleVariables[$i];
+
+                if ($i !== (count($linkTitleVariables) - 1)):
+                    $fulltext .= ' - ';
+                endif;
+            endfor;
+            ?>
+
+            <a href='/dossier/index/id/<?php echo $this->ID_DOSSIER ?>' title='<?php echo htmlspecialchars($fulltext, ENT_QUOTES) ?>'>
+                <?php if (null !== $this->LIBELLE_ETABLISSEMENTINFORMATIONS): ?>
                     <?php echo '[' . $this->LIBELLE_ETABLISSEMENTINFORMATIONS . '] ' ?>
-                <?php endif ?>
-                <?php echo $this->LIBELLE_DOSSIERTYPE . " - " . $this->LIBELLE_DOSSIERNATURE . (!empty($this->OBJET_DOSSIER) ? " - " . substr($this->OBJET_DOSSIER, 0, 70) . ( strlen($this->OBJET_DOSSIER) > 70 ? "(...)" : "" ) : "") . ( $this->NB_URBA != '' ? " - " . $this->NB_URBA : '') ?>
+                <?php endif;
+                
+                echo $fulltext;
+                ?>
             </a>
         </span>
 
